--- a/.gitignore
+++ b/.gitignore
@@ -309,3 +309,4 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,eclipse,gradle,windows,macos,linux
+/CodingTest.iml
